<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/done_btn"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_monday"
            style="@style/PeriodicityCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_of_week_mon"
            tools:checked="true" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_tuesday"
            style="@style/PeriodicityCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_of_week_tue"
            tools:checked="true" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_wednesday"
            style="@style/PeriodicityCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_of_week_wed"
            tools:checked="true" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_thursday"
            style="@style/PeriodicityCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_of_week_thu"/>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_friday"
            style="@style/PeriodicityCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_of_week_fri"
            tools:checked="true" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_saturday"
            style="@style/PeriodicityCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/day_of_week_sat"/>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_sunday"
            style="@style/PeriodicityCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_of_week_sun" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/done_btn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
