<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/taskListFragment">

    <fragment
        android:id="@+id/taskListFragment"
        android:name="io.github.beleavemebe.inbox.ui.fragments.tasklist.TaskListFragment"
        android:label="@string/my_tasks"
        tools:layout="@layout/fragment_task_list">
        <action
            android:id="@+id/action_taskListFragment_to_taskFragment"
            app:destination="@id/taskFragment">
        </action>
        <action
            android:id="@+id/action_taskListFragment_to_filterTasksDialog"
            app:destination="@id/filterTasksDialog" />

    </fragment>

    <fragment
        android:id="@+id/taskFragment"
        android:name="io.github.beleavemebe.inbox.ui.fragments.task.TaskFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_task">
        <argument
            android:name="taskId"
            app:argType="java.util.UUID"
            app:nullable="true" />
        <argument
            android:name="title"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/projectListFragment"
        android:name="io.github.beleavemebe.inbox.ui.fragments.projectlist.ProjectListFragment"
        android:label="@string/my_projects"
        tools:layout="@layout/fragment_project_list" >
    </fragment>

    <fragment
        android:id="@+id/infoListFragment"
        android:name="io.github.beleavemebe.inbox.ui.fragments.infolist.InfoListFragment"
        android:label="@string/information"
        tools:layout="@layout/fragment_info_list" >
    </fragment>

    <fragment
        android:id="@+id/meetingListFragment"
        android:name="io.github.beleavemebe.inbox.ui.fragments.meetinglist.MeetingListFragment"
        android:label="@string/my_meetings"
        tools:layout="@layout/fragment_meeting_list" >
    </fragment>

    <dialog
        android:id="@+id/filterTasksDialog"
        android:name="io.github.beleavemebe.inbox.ui.fragments.tasklist.FilterTasksDialog"
        tools:layout="@layout/dialog_filter_tasks"/>

</navigation>
