<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".ui.fragments.task.TaskFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_title_tv"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/main_guideline"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task"
            android:imeOptions="actionNext"
            android:maxLength="100"
            android:textSize="18sp"
            tools:text="Turquoise Hexagon Sun - make a cool remix" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/note_ti"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/main_guideline"
        app:layout_constraintTop_toBottomOf="@id/task_title_tv"
        app:startIconDrawable="@drawable/ic_baseline_edit_note_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/note_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note"
            tools:text="Make something like Boredom (Death Note) but way crazier" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/date_header_tv"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp"
        android:text="@string/date_and_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_ti"
        tools:viewBindingIgnore="true" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/date_cv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/main_guideline"
        app:layout_constraintTop_toBottomOf="@+id/date_header_tv"
        app:layout_constraintVertical_bias="0"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        app:cardCornerRadius="4dp"
        android:layout_marginTop="6dp"
        app:strokeColor="#5A5A5A"
        app:strokeWidth="0.8dp">

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="12dp"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:hint="@string/date"
            android:inputType="none"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_calendar"
            tools:text="Tue, Oct 19 2021" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/time_cv"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        app:cardCornerRadius="4dp"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/main_guideline"
        app:layout_constraintTop_toBottomOf="@+id/date_cv"
        app:layout_constraintVertical_bias="0"
        app:strokeColor="#5A5A5A"
        app:strokeWidth="0.8dp">

        <TextView
            android:id="@+id/time_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="12dp"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:hint="@string/time"
            android:inputType="none"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_time"
            tools:text="10:27" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/periodicity_header_tv"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp"
        android:text="@string/periodicity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_cv"
        tools:viewBindingIgnore="true" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_btn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/accent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/timestamp_tv"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/task_created_placeholder"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/save_btn"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Задача добавлена 29.07.2021 15:41" />

</androidx.constraintlayout.widget.ConstraintLayout>
